--- a/src/app/Pages/Patients/patients/patients.component.html
+++ b/src/app/Pages/Patients/patients/patients.component.html
@@ -1,1 +1,32 @@
-<p>patients works!</p>
+<div class="widget-header">
+  <div class="flex justify-content-end">
+    <div>
+      <i class="icon-th-list"></i>
+      <h3>Patients</h3>
+    </div>
+
+  </div>
+</div> <!-- /widget-header -->
+
+<div class="widget-content">
+
+  <table class="table table-striped table-bordered">
+    <thead>
+    <tr>
+      <th>#</th>
+      <th>Name</th>
+      <th>Date Of Birth</th>
+      <th>Gender</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr *ngFor="let patient of this.patients">
+      <td>{{patient.id}}</td>
+      <td>{{patient.name}}</td>
+      <td>{{patient.date_of_birth}}</td>
+      <td> {{patient.gender.name}}</td>
+    </tr>
+    </tbody>
+  </table>
+
+</div> <!-- /widget-content -->
