--- a/src/app/Pages/Patients/patient-service/patient-service.component.html
+++ b/src/app/Pages/Patients/patient-service/patient-service.component.html
@@ -6,7 +6,7 @@
     </div>
     <div>
 
-      <button class="btn btn-primary float-end mb-2">Add New Record</button>
+      <a class="btn btn-primary float-end mb-2" routerLink="/add-patient">Add New Record</a>
     </div>
   </div>
 </div> <!-- /widget-header -->
