--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
-<div>
+<div class="bg-default">
   <app-navbar/>
   <div class="container">
-    <router-outlet></router-outlet>
+    <div class="card shadow-lg rounded m-3 p-3">
+
+      <router-outlet></router-outlet>
+    </div>
   </div>
 </div>
